--- a/task1/index.html
+++ b/task1/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
 
-    <script src="app.js"></script>
+    <!-- <script src="app.js"></script> -->
+    <script src="evenodd.js"></script>
     
 </body>
 </html>
