--- a/WeatherApp/index.html
+++ b/WeatherApp/index.html
@@ -3,24 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Weather App</h1>
-    <div class="main_card" id="weather-info">
-        <div class="top_sec">
-            <div class="sec_temp">
-
-            </div>
-            <div class="sec_dis">
-
-            </div>
-
-        </div>
-        <div class="bottom_sec"></div>
+    <div class="my_card" id="weather-info">
+      <div class="top_sec">
+        <div class="sec_temp"></div>
+        <div class="sec_dis"></div>
+      </div>
+      <div class="bottom_sec"></div>
     </div>
-
-   <script src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
